<resources>
    <string name="app_name">TourCathy</string>
    <string name="selectPrompt">Select a Room from the List</string>
    <string name="enterNumPrompt">Enter a Room Number</string>
    <string name="enter">Enter</string>
    <string name="search_title">Search</string>
    <string name="achievements_title">Achievements</string>
    <string name="gallery_title">Gallery</string>
    <string name="quiz_title">Quiz</string>
    <string name="achievements_header">Welcome to TourCathy, an application that allows you to have an interactive and informative experience at the Cathedral of Learning Nationality Rooms. Browse a room, take pictures, test your knowledge, and earn points along the way! If you ever need help, click the "Help" icon at the top-right of the screen. Have fun exploring and learning different cultures!</string>
    <string name="your_points">Points Earned: </string>
    <string name="your_achievements">Your Recent Achievements:</string>
    <string name="gallery_header">Your Gallery Of Images From Today\'s Visit</string>
    <string name="item_list_header">Notable Items in the Room</string>
    <string name="found_label">Found</string>
    <string name="default_hint_display">Can\'t find it? \n Tap for hints!</string>
    <string name="action_help">Help</string>
    <string name="additional_resources">Find more information at:
                    \n\t <b>Website</b>
                    \n\t\t http://www.nationalityrooms.pitt.edu/
                    \n\t\t https://commons.wikimedia.org/wiki/Nationality_Rooms
                    \n\t Book:
                    \n\t <b>Information desk</b>
                    \n\t\t Information center phone number: 412-624-6000
                    \n\t\t Sundays from 11:00 AM - 4:00 PM
                    \n\t\t Mondays through Saturdays 9:00 AM - 4:00 PM
                    \n\t <b>Hours for touring</b>
                    \n\t\t Monday - Friday: 9:00 AM - 2:30 PM (last tour)
                    \n\t\t Saturday: 9:00 AM - 2:30 PM (last tour)
                    \n\t\t Sunday/ Holidays: 11:00 AM - 2:30 PM (last tour)</string>
    <string name="promptCodeInput">Input Item Code:</string>
    <string name="wrongCode">Error Incorrect Code Entered!</string>
    <string name="rightCode">Item Found!</string>
    <string name="item_list_intro">Search for the three items in this room! Hints are available if you are not able to find the item. You will be able to earn achievement points after validating your find with the specific code for each item.</string>
    <string name="quizIntro">Welcome to Quizzes! Test your knowledge by answering 3 questions about a Nationality Room.</string>
    <string name="submitAns">Submit Answers</string>
    <string name="help_welcome_message">Welcome to TourCathy, an application that allows you to have an interactive experience with the Nationality Rooms. Have fun, and happy learning!</string>
    <string name="selectTopic">Select Topic</string>
    <string-array name="category">
        <item>By Date</item>
        <item>By Room</item>
    </string-array>
    <string-array name="direction">
        <item>Ascending Order</item>
        <item>Descending Order</item>
    </string-array>
    <string-array name="room_names">
        <item>African Heritage</item>
        <item>Armenian</item>
        <item>Austrian</item>
        <item>Chinese</item>
        <item>Czechoslovak</item>
        <item>Early American</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Hungarian</item>
        <item>Indian</item>
        <item>Irish</item>
        <item>Israel Heritage</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean Heritage</item>
        <item>Lithuanian</item>
        <item>Norwegian</item>
        <item>Polish</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Scottish</item>
        <item>Syria-Lebanon</item>
        <item>Swedish</item>
        <item>Swiss</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Welsh</item>
        <item>Yugoslav</item>
    </string-array>
    <string-array name="room_numbers">
        <item>330</item>
        <item>319</item>
        <item>314</item>
        <item>136</item>
        <item>113</item>
        <item>328</item>
        <item>144</item>
        <item>149</item>
        <item>119</item>
        <item>137</item>
        <item>121</item>
        <item>327</item>
        <item>127</item>
        <item>337</item>
        <item>116</item>
        <item>317</item>
        <item>304</item>
        <item>129</item>
        <item>151</item>
        <item>126</item>
        <item>130</item>
        <item>153</item>
        <item>139</item>
        <item>000</item>
        <item>135</item>
        <item>321</item>
        <item>339</item>
        <item>341</item>
        <item>001</item>
        <item>142</item>
    </string-array>
</resources>