<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/achievements"
        android:icon="@drawable/ic_action_achievements"
        android:title="@string/achievements_title"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search_title"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/gallery"
        android:icon="@drawable/ic_action_gallery"
        android:title="@string/gallery_title"
        app:showAsAction="ifRoom"/>
    <!--<item
        android:id="@+id/quiz"
        android:icon="@drawable/ic_action_quiz"
        android:title="@string/quiz_title"
        app:showAsAction="ifRoom"/>-->

</menu>