<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:scrollbarSize="5dip"
    android:padding="3dp"
    tools:context="edu.pitt.cs.cs1635.jah234.cathedraltourguide.Room">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp"
            android:id="@+id/objectInfo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/item_list_header" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/item_list_intro"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="3dp">

                    <ImageView
                        android:id="@+id/item_pic_1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/ic_launcher_round" />

                    <Button
                        android:id="@+id/found1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/found_label"
                        android:background="@drawable/round_corner"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="186dp"
                    android:layout_height="201dp"
                    android:orientation="vertical"
                    android:padding="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="NameofObject1"
                        android:textAlignment="center"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/hint1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:text="@string/default_hint_display"
                        android:background="@drawable/round_corner"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="3dp">

                    <ImageView
                        android:id="@+id/item_pic_2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/ic_launcher_round" />

                    <Button
                        android:id="@+id/found2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/found_label"
                        android:background="@drawable/round_corner"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="186dp"
                    android:layout_height="201dp"
                    android:orientation="vertical"
                    android:padding="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="NameofObject2"
                        android:textAlignment="center"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/hint2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:text="@string/default_hint_display"
                        android:background="@drawable/round_corner"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="3dp">

                    <ImageView
                        android:id="@+id/item_pic_3"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/ic_launcher_round" />

                    <Button
                        android:id="@+id/found3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/found_label"
                        android:background="@drawable/round_corner"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="186dp"
                    android:layout_height="201dp"
                    android:orientation="vertical"
                    android:padding="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="NameofObject3"
                        android:textAlignment="center"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/hint3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:text="@string/default_hint_display"
                        android:background="@drawable/round_corner"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <!--<Space
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="3dp"
            android:id="@+id/moreInfo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/just_for_fun_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/colorGray">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:layout_margin="2dp"
                        android:background="@color/colorWhite"
                        android:text="Fun Facts:"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="3"
                    android:padding="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="Gallery (Click to Enlarge)"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="3dp"
                        android:background="@color/colorBlack">

                        <ImageButton
                            android:id="@+id/leftButton"
                            android:layout_width="0dp"
                            android:layout_height="120dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_prev"/>

                        <ImageSwitcher
                            android:id="@+id/imageSwitch"
                            android:layout_width="0dp"
                            android:layout_height="120dp"
                            android:clickable="true"
                            android:layout_weight="4"
                            android:background="@color/colorWhite"/>

                        <ImageButton
                            android:id="@+id/rightButton"
                            android:layout_width="0dp"
                            android:layout_height="120dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_next" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/take_quiz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quiz_label"
                        android:background="@drawable/round_corner"
                        android:layout_margin="5dp"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>-->

</ScrollView>